# pulseframeproductions.com

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/routers/: core.py  works.py
app/static/css/: style.css
app/static/js/: anita-gl-carousel.js  anita-gl-roll.js  anita-gl-slider.js  core.js
app/templates/: index.html.jinja
app/templates/shared/: _layout.html.jinja
app/templates/shared/partials/: _js.html.jinja
app/templates/works/: albums-gl-carousel.html  works-carousel-roll.html.jinja
app/utils/: logger_utils.py
frontend/: package-lock.json
frontend/src/: App.tsx
