[tool.poetry]
name = "pulseframeproductions"
version = "0.0.1"
description = "Source code for Pulse Frame Productions website/webapp"
authors = ["Sam Lim <sam@typhonic.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
