[tool.poetry]
name = "app"
version = "0.0.1"
description = "Source code for Pulse Frame Productions website/webapp"
authors = ["Sam Lim <sam@typhonic.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
